# nostrachat

./: Cargo.toml  README.md  config.toml
src/: ascii_art.rs  chats.rs  crypto.rs  main.rs  ui.rs
